--- a/.github/workflows/conditional-test.yml
+++ b/.github/workflows/conditional-test.yml
@@ -5,6 +5,9 @@ on:
   push:
     branches: ["mithun/azure-ad-conditional"]
 
+env:
+  MY_AADUSERNAME: ${{ secrets.AADUSERNAME }}
+
 jobs:
   conditional-job-1:
     runs-on: ubuntu-latest
@@ -17,9 +20,17 @@ jobs:
     runs-on: ubuntu-latest
     env:
       AADUSERNAME: ${{ secrets.AADUSERNAME }}
-    if: env.AADUSERNAME != null
+    # uncommenting below line will cause the workflow to fail with the error: "Unrecognized named-value: 'env'. Located at position 1 within expression: env.AADUSERNAME != null"  
+    # if: env.AADUSERNAME != null
     steps:
       - run: echo HELLO FROM CONDITIONAL JOB 2
+
+  conditional-job-3:
+    runs-on: ubuntu-latest
+    # uncommenting below line will cause the workflow to fail with the error: "Unrecognized named-value: 'env'. Located at position 1 within expression: env.AADUSERNAME != null"  
+    if: env.MY_AADUSERNAME != null
+    steps:
+      - run: echo HELLO FROM CONDITIONAL JOB 3
 
   regular-job-with-conditional-step:
     runs-on: ubuntu-latest
