[skip ci] test condtional workflow job

--- a/.github/workflows/contoso-traders-cloud-testing-template.yml
+++ b/.github/workflows/contoso-traders-cloud-testing-template.yml
@@ -42,6 +42,7 @@ env:
   UI_CDN_ENDPOINT_NAME: contoso-traders-ui2
   UI_STORAGE_ACCOUNT_NAME: contosotradersui2
   USER_ASSIGNED_MANAGED_IDENTITY_NAME: contoso-traders-mi-kv-access
+  ENABLE_LOGIN: true
 
 jobs:
   configure-azure-ad-app:
@@ -53,8 +54,7 @@ jobs:
     outputs:
       azureAdAppClientId: ${{ steps.get-azureAdAppClientId.outputs.azureAdAppClientId }}
       azureAdAppObjId: ${{ steps.get-azureAdAppObjId.outputs.azureAdAppObjId }}
-    # temporarily commented out
-    # if: ${{ vars.ENABLE_LOGIN == true }} 
+    if: ${{ env.ENABLE_LOGIN == 'true' }} 
     concurrency:
       group: load-tests-carts-api
       cancel-in-progress: true
@@ -126,6 +126,7 @@ jobs:
       AADUSERNAME: ${{secrets.AADUSERNAME}}
       AADPASSWORD: ${{secrets.AADPASSWORD}}
     needs: [configure-azure-ad-app]
+    if: success() || needs.configure-azure-ad-app.result == 'skipped'
     outputs:
       cartsApiEndpoint: ${{ steps.get-cartsApiEndpoint.outputs.cartsApiEndpoint }}
       productsApiEndpoint: ${{ steps.get-productsApiEndpoint.outputs.productsApiEndpoint }}
@@ -412,7 +413,7 @@ jobs:
       - name: set REACT_APP_APIURL
         run: echo "REACT_APP_APIURL"="https://${{ steps.get-productsApiEndpoint.outputs.productsApiEndpoint }}/v1" >> $GITHUB_ENV
       - name: set REACT_APP_B2CCLIENTID
-        if: ${{ vars.ENABLE_LOGIN == true }}
+        if: ${{ env.ENABLE_LOGIN == 'true' }}
         run: echo "REACT_APP_B2CCLIENTID"="${{ needs.configure-azure-ad-app.outputs.azureAdAppClientId }}" >> $GITHUB_ENV
       - uses: actions/setup-node@v3
         with:
@@ -443,7 +444,7 @@ jobs:
         with:
           inlineScript: echo UI CDN endpoint accessible at https://$(az keyvault secret show --vault-name ${{ env.KV_NAME }}${{ vars.SUFFIX }} --name uiCdnEndpoint --query value -o tsv)
       - name: register auth callback (UI CDN)
-        if: ${{ vars.ENABLE_LOGIN == true }}
+        if: ${{ env.ENABLE_LOGIN == 'true' }}
         uses: azure/CLI@v1
         with:
           inlineScript: |
