--- a/.github/workflows/contoso-traders-cloud-testing-template.yml
+++ b/.github/workflows/contoso-traders-cloud-testing-template.yml
@@ -6,6 +6,10 @@ on:
       environmentName:
         required: true
         type: string
+      configureAzureAD:
+        required: false
+        type: boolean
+        default: false
 
 env:
   # You can specify any location for `SUB_DEPLOYMENT_REGION`. It's the region where the deployment
@@ -53,7 +57,7 @@ jobs:
     outputs:
       azureAdAppClientId: ${{ steps.get-azureAdAppClientId.outputs.azureAdAppClientId }}
       azureAdAppObjId: ${{ steps.get-azureAdAppObjId.outputs.azureAdAppObjId }}
-    if: ${{ vars.ENABLE_LOGIN == 'true' }}
+    if: ${{ inputs.configureAzureAD == true }}
     concurrency:
       group: load-tests-carts-api
       cancel-in-progress: true
@@ -412,7 +416,7 @@ jobs:
       - name: set REACT_APP_APIURL
         run: echo "REACT_APP_APIURL"="https://${{ steps.get-productsApiEndpoint.outputs.productsApiEndpoint }}/v1" >> $GITHUB_ENV
       - name: set REACT_APP_B2CCLIENTID
-        if: ${{ vars.ENABLE_LOGIN == 'true' }}
+        if: ${{ inputs.configureAzureAD == true }}
         run: echo "REACT_APP_B2CCLIENTID"="${{ needs.configure-azure-ad-app.outputs.azureAdAppClientId }}" >> $GITHUB_ENV
       - uses: actions/setup-node@v3
         with:
@@ -443,7 +447,7 @@ jobs:
         with:
           inlineScript: echo UI CDN endpoint accessible at https://$(az keyvault secret show --vault-name ${{ env.KV_NAME }}${{ vars.SUFFIX }} --name uiCdnEndpoint --query value -o tsv)
       - name: register auth callback (UI CDN)
-        if: ${{ vars.ENABLE_LOGIN == 'true' }}
+        if: ${{ inputs.configureAzureAD == true }}
         uses: azure/CLI@v1
         with:
           inlineScript: |
