--- a/.github/workflows/contoso-traders-cloud-testing.yml
+++ b/.github/workflows/contoso-traders-cloud-testing.yml
@@ -14,6 +14,7 @@ jobs:
     secrets: inherit
     with:
       environmentName: staging
+      configureAzureAD: ${{ secrets.AADUSERNAME2 != null }}
 
   production:
     needs: staging
@@ -21,3 +22,4 @@ jobs:
     secrets: inherit
     with:
       environmentName: production
+      configureAzureAD: ${{ secrets.AADUSERNAME != null }}
