--- a/.github/workflows/contoso-traders-cloud-testing.yml
+++ b/.github/workflows/contoso-traders-cloud-testing.yml
@@ -14,7 +14,7 @@ jobs:
     secrets: inherit
     with:
       environmentName: staging
-      configureAzureAD: ${{ secrets.AADUSERNAME2 != null }}
+      configureAzureAD: ${{ vars.ENABLE_LOGIN == 'true' }}
 
   production:
     needs: staging
@@ -22,4 +22,4 @@ jobs:
     secrets: inherit
     with:
       environmentName: production
-      configureAzureAD: ${{ secrets.AADUSERNAME != null }}
+      configureAzureAD: ${{ vars.ENABLE_LOGIN == 'true' }}
