--- a/src/ContosoTraders.Ui.Website/package.json
+++ b/src/ContosoTraders.Ui.Website/package.json
@@ -52,11 +52,11 @@
     ]
   },
   "devDependencies": {
-    "@playwright/test": "^1.30.0",
+    "@playwright/test": "^1.31.2",
     "@types/node": "^18.11.18",
     "babel-plugin-macros": "^2.8.0",
     "csv-parse": "^5.3.4",
-    "typescript": "^4.9.4",
-    "sass": "^1.58.0"
+    "sass": "^1.58.0",
+    "typescript": "^4.9.4"
   }
 }
