--- a/.github/workflows/contoso-traders-cloud-testing-template.yml
+++ b/.github/workflows/contoso-traders-cloud-testing-template.yml
@@ -49,17 +49,14 @@ env:
 
 jobs:
   configure-azure-ad-app:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     environment: ${{ inputs.environmentName }}
-    env:
-      AADUSERNAME: ${{secrets.AADUSERNAME}}
-      AADPASSWORD: ${{secrets.AADPASSWORD}}
     outputs:
       azureAdAppClientId: ${{ steps.get-azureAdAppClientId.outputs.azureAdAppClientId }}
       azureAdAppObjId: ${{ steps.get-azureAdAppObjId.outputs.azureAdAppObjId }}
     if: ${{ inputs.configureAzureAD == true }}
     concurrency:
-      group: load-tests-carts-api
+      group: configure-azure-ad-app
       cancel-in-progress: true
     steps:
       - name: checkout code
@@ -121,14 +118,11 @@ jobs:
               --api-permissions ${{ env.MSGRAPH_API_PERMISSION_USER_READ }} ${{ env.MSGRAPH_API_PERMISSION_EMAIL }}
 
   provision:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
+    needs: [configure-azure-ad-app]
     environment:
       name: ${{ inputs.environmentName }}
       url: https://${{ steps.get-uiCdnEndpoint.outputs.uiCdnEndpoint }}
-    env:
-      AADUSERNAME: ${{secrets.AADUSERNAME}}
-      AADPASSWORD: ${{secrets.AADPASSWORD}}
-    needs: [configure-azure-ad-app]
     if: success() || needs.configure-azure-ad-app.result == 'skipped'
     outputs:
       cartsApiEndpoint: ${{ steps.get-cartsApiEndpoint.outputs.cartsApiEndpoint }}
@@ -457,11 +451,100 @@ jobs:
               --headers 'Content-Type=application/json' \
               --body '{"spa":{"redirectUris":["https://localhost:3000/authcallback","http://localhost:3000/authcallback","https://staging.contosotraders.com/authcallback","https://production.contosotraders.com/authcallback","https://${{ steps.get-uiCdnEndpoint.outputs.uiCdnEndpoint }}/authcallback"]}}'
 
-  load-tests-carts-api:
-    runs-on: ubuntu-latest
+  playwright-tests-ui:
+    needs: [provision]
+    timeout-minutes: 20
+    runs-on: ubuntu-22.04
     environment: ${{ inputs.environmentName }}
     if: ${{ inputs.environmentName == 'staging' }}
+    container:
+      image: mcr.microsoft.com/playwright:v1.31.2-focal
+    defaults:
+      run:
+        working-directory: src/ContosoTraders.Ui.Website
+    env:
+      AADUSERNAME: ${{secrets.AADUSERNAME}}
+      AADPASSWORD: ${{secrets.AADPASSWORD}}
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: npm
+          cache-dependency-path: src/ContosoTraders.Ui.Website/package-lock.json
+      - name: Set env variables for testing endpoints
+        run: |
+          echo "REACT_APP_APIURLSHOPPINGCART"="https://${{ needs.provision.outputs.cartsApiEndpoint }}/v1" >> $GITHUB_ENV
+          echo "REACT_APP_APIURL"="https://${{ needs.provision.outputs.productsApiEndpoint }}/v1" >> $GITHUB_ENV
+          echo "REACT_APP_BASEURLFORPLAYWRIGHTTESTING"="https://${{ needs.provision.outputs.uiCdnEndpoint }}" >> $GITHUB_ENV
+          echo "REACT_APP_B2CCLIENTID"="${{ needs.provision.outputs.azureAdAppClientId }}" >> $GITHUB_ENV
+      - name: install dependencies
+        run: npm ci
+      - name: run playwright tests
+        run: HOME=/root npx playwright test
+      - name: upload playwright report
+        uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: playwright-report
+          path: src/ContosoTraders.Ui.Website/playwright-report/
+          retention-days: 30
+
+  load-tests-products-api:
     needs: [provision]
+    runs-on: ubuntu-22.04
+    environment: ${{ inputs.environmentName }}
+    if: ${{ inputs.environmentName == 'staging' }}
+    concurrency:
+      group: load-tests-products-api
+      cancel-in-progress: true
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v3
+      - name: azure login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.SERVICEPRINCIPAL }}
+      - name: load test (products API)
+        uses: Azure/load-testing@v1.1.13
+        with:
+          # Path of the YAML file. Should be fully qualified path or relative to the default working directory
+          loadtestConfigFile: ./loadtests/contoso-traders-products.yaml
+          loadtestResource: ${{ env.LOAD_TEST_SERVICE_NAME }}${{ vars.SUFFIX }}
+          resourceGroup: ${{ env.RESOURCE_GROUP_NAME }}${{ vars.SUFFIX }}
+          env: |
+            [
+              {
+                "name": "domain",
+                "value": "${{ needs.provision.outputs.productsApiEndpoint }}"
+              },
+              {
+                "name": "protocol",
+                "value": "https"
+              },
+              {
+                "name": "path",
+                "value": "v1/Products/1"
+              },
+              {
+                "name": "threads_per_engine",
+                "value": "5"
+              },
+              {
+                "name": "ramp_up_time",
+                "value": "0"
+              },
+              {
+                "name": "duration_in_sec",
+                "value": "120"
+              }
+            ]
+
+  load-tests-carts-api:
+    needs: [provision]
+    runs-on: ubuntu-22.04
+    environment: ${{ inputs.environmentName }}
+    if: ${{ inputs.environmentName == 'staging' }}
     concurrency:
       group: load-tests-carts-api
       cancel-in-progress: true
@@ -508,10 +591,10 @@ jobs:
             ]
 
   load-tests-carts-internal-api:
-    runs-on: ubuntu-latest
+    needs: [provision]
+    runs-on: ubuntu-22.04
     environment: ${{ inputs.environmentName }}
     if: ${{ inputs.environmentName == 'staging' }}
-    needs: [provision]
     concurrency:
       group: load-tests-carts-internal-api
       cancel-in-progress: true
@@ -575,62 +658,12 @@ jobs:
               }
             ]
 
-  load-tests-products-api:
-    runs-on: ubuntu-latest
-    environment: ${{ inputs.environmentName }}
-    if: ${{ inputs.environmentName == 'staging' }}
-    needs: [provision]
-    concurrency:
-      group: load-tests-products-api
-      cancel-in-progress: true
-    steps:
-      - name: checkout code
-        uses: actions/checkout@v3
-      - name: azure login
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.SERVICEPRINCIPAL }}
-      - name: load test (products API)
-        uses: Azure/load-testing@v1.1.13
-        with:
-          # Path of the YAML file. Should be fully qualified path or relative to the default working directory
-          loadtestConfigFile: ./loadtests/contoso-traders-products.yaml
-          loadtestResource: ${{ env.LOAD_TEST_SERVICE_NAME }}${{ vars.SUFFIX }}
-          resourceGroup: ${{ env.RESOURCE_GROUP_NAME }}${{ vars.SUFFIX }}
-          env: |
-            [
-              {
-                "name": "domain",
-                "value": "${{ needs.provision.outputs.productsApiEndpoint }}"
-              },
-              {
-                "name": "protocol",
-                "value": "https"
-              },
-              {
-                "name": "path",
-                "value": "v1/Products/1"
-              },
-              {
-                "name": "threads_per_engine",
-                "value": "5"
-              },
-              {
-                "name": "ramp_up_time",
-                "value": "0"
-              },
-              {
-                "name": "duration_in_sec",
-                "value": "120"
-              }
-            ]
-
   #
   # Job below will be commented out until issue #126 is resolved
   # https://github.com/microsoft/contosotraders-cloudtesting/issues/126
   #
   # chaos-experiment-products-api:
-  #   runs-on: ubuntu-latest
+  #   runs-on: ubuntu-22.04
   #   environment: ${{ inputs.environmentName }}
   #   if: ${{ inputs.environmentName == 'staging' }}
   #   needs: [load-tests-products-api, playwright-tests-ui]
@@ -690,43 +723,3 @@ jobs:
   #               "value": "120"
   #             }
   #           ]
-
-  playwright-tests-ui:
-    name: "playwright-tests"
-    needs: [provision]
-    timeout-minutes: 20
-    runs-on: ubuntu-latest
-    environment: ${{ inputs.environmentName }}
-    if: ${{ inputs.environmentName == 'staging' }}
-    container:
-      image: mcr.microsoft.com/playwright:v1.31.2-focal
-    defaults:
-      run:
-        working-directory: src/ContosoTraders.Ui.Website
-    env:
-      AADUSERNAME: ${{secrets.AADUSERNAME}}
-      AADPASSWORD: ${{secrets.AADPASSWORD}}
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: npm
-          cache-dependency-path: src/ContosoTraders.Ui.Website/package-lock.json
-      - name: Set env variables for testing endpoints
-        run: |
-          echo "REACT_APP_APIURLSHOPPINGCART"="https://${{ needs.provision.outputs.cartsApiEndpoint }}/v1" >> $GITHUB_ENV
-          echo "REACT_APP_APIURL"="https://${{ needs.provision.outputs.productsApiEndpoint }}/v1" >> $GITHUB_ENV
-          echo "REACT_APP_BASEURLFORPLAYWRIGHTTESTING"="https://${{ needs.provision.outputs.uiCdnEndpoint }}" >> $GITHUB_ENV
-          echo "REACT_APP_B2CCLIENTID"="${{ needs.provision.outputs.azureAdAppClientId }}" >> $GITHUB_ENV
-      - name: install dependencies
-        run: npm ci
-      - name: run playwright tests
-        run: HOME=/root npx playwright test
-      - name: upload playwright report
-        uses: actions/upload-artifact@v3
-        if: always()
-        with:
-          name: playwright-report
-          path: src/ContosoTraders.Ui.Website/playwright-report/
-          retention-days: 30
