--- a/.github/workflows/contoso-traders-cloud-testing-template.yml
+++ b/.github/workflows/contoso-traders-cloud-testing-template.yml
@@ -664,6 +664,11 @@ jobs:
         run: npm ci
       - name: run playwright tests
         run: HOME=/root npx playwright test
+      - name: Create GHA test summary
+        uses: test-summary/action@dist
+        if: always()
+        with:
+          paths: src/ContosoTraders.Ui.Website/test-results/junit.xml        
       - name: upload playwright report
         uses: actions/upload-artifact@v3
         if: always()
