--- a/.github/workflows/contoso-traders-cloud-testing-template.yml
+++ b/.github/workflows/contoso-traders-cloud-testing-template.yml
@@ -634,8 +634,8 @@ jobs:
             ]
 
   playwright-tests-ui:
-    needs: [provision]
-    timeout-minutes: 20
+    #needs: [provision]
+    timeout-minutes: 40
     runs-on: ubuntu-22.04
     environment: ${{ inputs.environmentName }}
     if: ${{ inputs.environmentName == 'staging' }}
@@ -656,10 +656,9 @@ jobs:
           cache-dependency-path: src/ContosoTraders.Ui.Website/package-lock.json
       - name: Set env variables for testing endpoints
         run: |
-          echo "REACT_APP_APIURLSHOPPINGCART"="https://${{ needs.provision.outputs.cartsApiEndpoint }}/v1" >> $GITHUB_ENV
-          echo "REACT_APP_APIURL"="https://${{ needs.provision.outputs.productsApiEndpoint }}/v1" >> $GITHUB_ENV
-          echo "REACT_APP_BASEURLFORPLAYWRIGHTTESTING"="https://${{ needs.provision.outputs.uiCdnEndpoint }}" >> $GITHUB_ENV
-          echo "REACT_APP_B2CCLIENTID"="${{ needs.provision.outputs.azureAdAppClientId }}" >> $GITHUB_ENV
+          echo "REACT_APP_APIURLSHOPPINGCART"="https://contoso-traders-cartsctstg.livelygrass-74d6f26a.eastus.azurecontainerapps.io/v1" >> $GITHUB_ENV
+          echo "REACT_APP_APIURL"="https://contoso-traders-productsctstg.eastus.cloudapp.azure.com/v1" >> $GITHUB_ENV
+          echo "REACT_APP_BASEURLFORPLAYWRIGHTTESTING"="https://staging.contosotraders.com" >> $GITHUB_ENV
       - name: install dependencies
         run: npm ci
       - name: run playwright tests
@@ -669,5 +668,5 @@ jobs:
         if: always()
         with:
           name: playwright-report
-          path: src/ContosoTraders.Ui.Website/playwright-report/
+          path: src/ContosoTraders.Ui.Website/pages.spec.ts-snapshots
           retention-days: 30
