--- a/.github/workflows/contoso-traders-cloud-testing-template.yml
+++ b/.github/workflows/contoso-traders-cloud-testing-template.yml
@@ -668,5 +668,5 @@ jobs:
         if: always()
         with:
           name: playwright-report
-          path: src/ContosoTraders.Ui.Website/pages.spec.ts-snapshots
+          path: src/ContosoTraders.Ui.Website/tests/pages.spec.ts-snapshots
           retention-days: 30
