--- a/.github/workflows/contoso-traders-cloud-testing-template.yml
+++ b/.github/workflows/contoso-traders-cloud-testing-template.yml
@@ -663,7 +663,9 @@ jobs:
       - name: install dependencies
         run: npm ci
       - name: run playwright tests
-        run: HOME=/root npx playwright test    
+        run: HOME=/root npx playwright test
+      - name: Generate code coverage report
+        run: npx nyc report --reporter=lcovonly        
       - name: upload playwright report
         uses: actions/upload-artifact@v3
         if: always()
