--- a/src/ContosoTraders.Ui.Website/package.json
+++ b/src/ContosoTraders.Ui.Website/package.json
@@ -10,6 +10,7 @@
     "history": "^4.9.0",
     "msal": "^1.4.17",
     "mui-file-dropzone": "^4.0.2",
+    "nyc": "^15.1.0",
     "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -47,8 +48,10 @@
   "devDependencies": {
     "@playwright/test": "^1.31.2",
     "@types/node": "^18.11.18",
+    "babel-plugin-istanbul": "^6.1.1",
     "babel-plugin-macros": "^2.8.0",
     "csv-parse": "^5.3.4",
+    "customize-cra": "^1.0.0",
     "sass": "^1.58.0",
     "typescript": "^4.9.4"
   }
